--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.60.6",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.16.3",
     "react-dom": "^18.3.1",
