--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-big-calendar": "^1.16.3",
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "react-spinners": "^0.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
