--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.3.1",
     "react-big-calendar": "^1.16.3",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
     "react-spinners": "^0.15.0"
