--- a/package.json
+++ b/package.json
@@ -19,20 +19,28 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@heroicons/react": "^2.0.18",
+    "@remixicon/react": "^4.6.0",
     "@tanstack/react-query": "^5.60.6",
+    "@tremor/react": "^3.18.7",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.16.3",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
-    "react-spinners": "^0.15.0"
+    "react-spinners": "^0.15.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwind-variants": "^0.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
